# pico-pydantic

./: .coveragerc  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
docs/: architecture.md
src/pico_pydantic/: __init__.py  decorators.py  interceptor.py
tests/: test_edge_cases.py  test_validation.py
