[build-system]
requires = ["setuptools>=69.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-pydantic"
dynamic = ["version"]
authors = [{ name = "David Perez Cabrera", email = "dperezcabrera@gmail.com" }]
description = "Async-first pydantic integration for Pico-IoC. Enables defining pydantic tasks as async methods on IoC-managed components, with automatic discovery, dependency injection, and container-scoped execution."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
    "ioc",
    "di",
    "dependency injection",
    "pydantic",
    "validation",
    "data validation",
    "argument validation",
    "method interceptor",
    "inversion of control",
    "spring boot",
    "controller"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "pico-ioc >= 2.1.3",
    "pydantic >= 2.0.0",
]

[project.optional-dependencies]
session = ["starlette-session"]
run = ["uvicorn[standard]"]

[project.urls]
Homepage = "https://github.com/dperezcabrera/pico-pydantic"
Repository = "https://github.com/dperezcabrera/pico-pydantic"
"Issue Tracker" = "https://github.com/dperezcabrera/pico-pydantic/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pico_pydantic*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.2.0"
write_to = "src/pico_pydantic/_version.py"
write_to_template = "__version__ = '{version}'\n"

[project.entry-points."pico_stack.modules"]
pico_pydantic = "pico_pydantic"

